remove currency symbol

--- a/tinacg/vertfolia/templates/vertfolia/transactions_table.html
+++ b/tinacg/vertfolia/templates/vertfolia/transactions_table.html
@@ -35,7 +35,7 @@
 	  {% endif%}
 	  </td>
 	  
-	  <td nowrap>{{ transaction.currency }} {{ transaction.value|floatformat:2 }}</td>
+	  <td nowrap>{{ transaction.value|floatformat:2 }}</td>
 
       <td>{{ transaction.description }}</td>
 	</tr>
