--- a/tinacg/vertfolia/static/css/tablesorterblue/style.css
+++ b/tinacg/vertfolia/static/css/tablesorterblue/style.css
@@ -14,7 +14,7 @@ table.tablesorter thead tr th, table.tablesorter tfoot tr th {
 	padding: 4px;
 }
 table.tablesorter thead tr .header {
-	background-image: url(bg_none.gif);
+	/* background-image: url(bg_none.gif); */
 	background-repeat: no-repeat;
 	background-position: center right;
 	cursor: pointer;
