saw ephemeral bug, cannot reproduce

--- a/tinacg/vertfolia/templates/vertfolia/index.html
+++ b/tinacg/vertfolia/templates/vertfolia/index.html
@@ -2,6 +2,7 @@
 {% load vertfolia_tags %}
 
 <head>
+  <title>VertFolia</title>
 	<link rel="stylesheet" href="{% static "js/jquery.treeview.css" %}" />
 	<link rel="stylesheet" href="{% static "js/screen.css" %}"/>
 	<link rel="stylesheet" href="{% static "css/main.css" %}"/>
